--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <nav class="navbar navbar-light navbar-expand-md bg-faded justify-content-center">
 
         <a class="navbar-brand d-flex w-50 mr-auto justify-content-center" href="index.html">
-          <img src="images\Malav_logo.png" alt="logo" style="width:200px;">
+          <img src="images/Malav_logo.png" alt="logo" style="width:200px;">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
