--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
   <!--**************************************Top Container**************************************************-->
-   <div class="top-container">
+  <div class="top-container">
     <div class="container-fluid">
       <nav class="navbar navbar-light navbar-expand-md bg-faded justify-content-center">
 
@@ -35,7 +35,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0" >
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link active" href="index.html">Home</a>
             </li>
@@ -171,6 +171,7 @@
     })();
   </script>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
