--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Me</title>
+  <title>Malav Panchal</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="icon" href="images\Malav.ico">
   <!-- This link is for google fonts -->
@@ -22,25 +22,23 @@
 <body>
 
   <!--**************************************Top Container**************************************************-->
-   <div class="top-container">
+  <div class="top-container">
     <div class="container-fluid">
       <nav class="navbar navbar-light navbar-expand-md bg-faded justify-content-center">
-
         <a class="navbar-brand d-flex w-50 mr-auto justify-content-center" href="index.html">
-          <img src="images\Malav_logo.png" alt="logo" style="width:200px;">
+          <img src="images\Malav_Logo.png" alt="logo" style="width:200px;">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0" >
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link active" href="about.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="services.html">Services</a>
@@ -56,17 +54,32 @@
 
 
   <!--**************************************Middle Container**************************************************-->
-  <div class="middle-container">
-    <div class="profile" id="profile">
-      <img src="images\Malav-circle.png" alt="profile-pic">
-      <h2>Meet Malav</h2>
-      <p class="about-text">An industrious REALTOR® who enjoys interacting with others, I takes the time to forge honest, meaningful relationships with my clients.</p>
+  <div class="about-page-middle-container">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="about-pic" id="about-pic">
+            <img src="images\about-photo.jpg" alt="about-pic">
+          </div>
+        </div>
+        <div class="col">
+          <h2>MALAV PANCHAL</h2>
+          <h3>Sales Representative</h3>
+          <p class="about-text" id="about-text">Malav Panchal began his career in real estate after being inspired by his own home buying experience. <br><br>
+            An industrious REALTOR® who enjoys interacting with others, I takes the time to forge honest, meaningful relationships with my clients.
+            Through frequent communication and clarification of industry terms and procedures, he strives to ensure they are fully informed and understand all aspects of any purchase or sale.<br><br>
+            Malav graduated studied Electronic Engineering. During his time, he volunteered as an Orientation Leader, encouraging and assisting new students.
+            He went on to work in the Software industry as a Quality Assurance Engineer. This developed his troubleshooting skills and taught him the importance of attention to detail in every task,
+            svaluable experience he brings with him to his exciting journey as a REALTOR.<br><br>
+            Malav is proficient in both spoken and written English, Gujarati and Hindi.</p>
+        </div>
+      </div>
     </div>
-
   </div>
 
 
-    <a href="mailto:realtor.malav@gmail.com" class="myButton">CONTACT ME</a>
+  <div class="contact-me-container">
+
   </div>
 
 
@@ -96,6 +109,7 @@
     })();
   </script>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
