--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="profile" id="profile">
       <img src="images\Malav-circle.png" alt="profile-pic">
       <h2>Meet Malav</h2>
-      <p class="about-text">An industrious REALTOR® who enjoys interacting with others, I takes the time to forge honest, meaningful relationships with my clients.</p>
+      <p class="index-meet-text">An industrious REALTOR® who enjoys interacting with others, I takes the time to forge honest, meaningful relationships with my clients.</p>
     </div>
     <div class="social" id="social">
       <h2>Check out my Instagram</h2>
@@ -169,7 +169,7 @@
     })();
   </script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
