--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
 
   <!--**************************************Middle Container**************************************************-->
   <div class="about-page-middle-container">
-    <div class="container">
+    <div class="about-page-container">
       <div class="row">
         <div class="col">
           <div class="about-pic" id="about-pic">
