--- a/about.html
+++ b/about.html
@@ -55,6 +55,8 @@
 
   <!--**************************************Middle Container**************************************************-->
   <div class="about-page-middle-container">
+
+    <!--**************************************About section Container**************************************************-->
     <div class="about-page-container">
       <div class="row">
         <div class="col">
@@ -78,9 +80,24 @@
   </div>
 
 
-  <div class="contact-me-container">
-
+  <div class="about-page-value-container">
+    <div class="row">
+      <div class="col">
+        <div class="value-heading">
+          <h3>My Values</h3>
+          <h2>Integrity & Trust</h2>
+          <p class="value-text" id="value-text">I give the clients I work with my full & undivided attention to truly understand and ensure their needs are being met from the start.<br><br>
+            The fundamental core of any professional relationship is trust. It is important to me that my clients feel that I have their best intentions always in mind.</p>
+        </div>
+      </div>
+      <div class="col">
+        <div class="value-pic">
+          <img id="value-pic" src="images\value.jpg" alt="value-pic">
+        </div>
+      </div>
+    </div>
   </div>
+
 
 
 
