--- a/about.html
+++ b/about.html
@@ -91,9 +91,7 @@
         </div>
       </div>
       <div class="col">
-        <div class="value-pic">
-          <img id="value-pic" src="images\value.jpg" alt="value-pic">
-        </div>
+          <img class="img-fluid"  src="images\value.jpg" alt="value-pic">        
       </div>
     </div>
   </div>
