--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
       </nav>
 
-      <div class="img-fluid">
+      <div class="img-banner-fluid">
         <div class="maintxt">
           Your perfect home awaits you.
         </div>
