--- a/about.html
+++ b/about.html
@@ -90,8 +90,8 @@
             The fundamental core of any professional relationship is trust. It is important to me that my clients feel that I have their best intentions always in mind.</p>
         </div>
       </div>
-      <div class="col">
-          <img class="img-fluid"  src="images\value.jpg" alt="value-pic">        
+      <div class="col img-fluid">
+          <img src="images\value.jpg" alt="value-pic">
       </div>
     </div>
   </div>
