--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
         </div>
       </div>
       <div class="col img-fluid">
-          <img src="images\value.jpg" alt="value-pic">
+          <img class="value-pic" src="images\value.jpg" alt="value-pic">
       </div>
     </div>
   </div>
