--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Malav Panchal</title>
+  <title>About | Real Estate by Malav</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="icon" href="images\Malav.ico">
   <!-- This link is for google fonts -->
@@ -84,13 +84,13 @@
     <div class="row">
       <div class="col">
         <div class="value-heading">
-          <h3>My Values</h3>
-          <h2>Integrity & Trust</h2>
+          <h3 style="color:#fff;">My Values</h3>
+          <h2 style="color:#fff;">Integrity & Trust</h2>
           <p class="value-text" id="value-text">I give the clients I work with my full & undivided attention to truly understand and ensure their needs are being met from the start.<br><br>
             The fundamental core of any professional relationship is trust. It is important to me that my clients feel that I have their best intentions always in mind.</p>
         </div>
       </div>
-      <div class="col img-fluid">
+      <div class="col img-fluid" style="text-align: right;">
           <img class="value-pic" src="images\value.jpg" alt="value-pic">
       </div>
     </div>
