--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Me</title>
+  <title>Contact Us | Real Estate by Malav</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="icon" href="images\Malav.ico">
   <!-- This link is for google fonts -->
@@ -22,22 +22,20 @@
 <body>
 
   <!--**************************************Top Container**************************************************-->
-   <div class="top-container">
+  <div class="top-container">
     <div class="container-fluid">
       <nav class="navbar navbar-light navbar-expand-md bg-faded justify-content-center">
-
         <a class="navbar-brand d-flex w-50 mr-auto justify-content-center" href="index.html">
-          <img src="images\Malav_logo.png" alt="logo" style="width:200px;">
+          <img src="images\Malav_Logo.png" alt="logo" style="width:200px;">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0" >
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
@@ -46,7 +44,7 @@
               <a class="nav-link" href="services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact Us</a>
+              <a class="nav-link active" href="contact.html">Contact Us</a>
             </li>
           </ul>
         </div>
@@ -56,31 +54,49 @@
 
 
   <!--**************************************Middle Container**************************************************-->
-  <div class="middle-container">
-    <div class="profile" id="profile">
-      <img src="images\Malav-circle.png" alt="profile-pic">
-      <h2>Meet Malav</h2>
-      <p class="about-text">An industrious REALTOR® who enjoys interacting with others, I takes the time to forge honest, meaningful relationships with my clients.</p>
-    </div>
+  <div class="about-page-middle-container">
 
+    <!--**************************************About section Container**************************************************-->
+    <div class="service-page-container">
+
+      <div class="row">
+        <div class="col">
+          <div class="about-pic" id="about-pic">
+            <img src="images\about-photo.jpg" alt="about-pic">
+          </div>
+        </div>
+        <div class="col">
+          <h2>MALAV PANCHAL</h2>
+          <h3>Sales Representative</h3>
+          <p class="about-text" id="about-text">Malav Panchal began his career in real estate after being inspired by his own home buying experience. <br><br>
+            An industrious REALTOR® who enjoys interacting with others, I takes the time to forge honest, meaningful relationships with my clients.
+            Through frequent communication and clarification of industry terms and procedures, he strives to ensure they are fully informed and understand all aspects of any purchase or sale.<br><br>
+            Malav graduated studied Electronic Engineering. During his time, he volunteered as an Orientation Leader, encouraging and assisting new students.
+            He went on to work in the Software industry as a Quality Assurance Engineer. This developed his troubleshooting skills and taught him the importance of attention to detail in every task,
+            svaluable experience he brings with him to his exciting journey as a REALTOR.<br><br>
+            Malav is proficient in both spoken and written English, Gujarati and Hindi.</p>
+        </div>
+      </div>
+    </div>
   </div>
 
 
-  <div class="contact-me-container">
+  <div class="about-page-value-container">
     <div class="row">
-      <div class="map d-flex justify-content-evenly col">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2895.300282042722!2d-80.48081278450799!3d43.475203379127876!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882bf3788e65c45f%3A0x6bf6fc8066fca2dd!2sReal%20Estate%20by%20Malav!5e0!3m2!1sen!2sca!4v1630073346745!5m2!1sen!2sca"
-          width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      <div class="col">
+        <div class="value-heading">
+          <h3 style="color:#fff;">My Values</h3>
+          <h2 style="color:#fff;">Integrity & Trust</h2>
+          <p class="value-text" id="value-text">I give the clients I work with my full & undivided attention to truly understand and ensure their needs are being met from the start.<br><br>
+            The fundamental core of any professional relationship is trust. It is important to me that my clients feel that I have their best intentions always in mind.</p>
+        </div>
       </div>
-      <div class="hours col">
-        <h2>Location & Hours</h2>
-        <p class="address" id="address">508 Riverbend Drive <br />Kitchener, ON N2K 3S2</p>
+      <div class="col img-fluid" style="text-align: right;">
+          <img class="value-pic" src="images\value.jpg" alt="value-pic">
       </div>
     </div>
-
-    <a href="mailto:realtor.malav@gmail.com" class="myButton">CONTACT ME</a>
   </div>
+
 
 
 
@@ -109,6 +125,7 @@
     })();
   </script>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
