--- a/about.html
+++ b/about.html
@@ -62,6 +62,9 @@
               <a class="nav-link" href="services.html">Services</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="Social_media.html">Social Media</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact Us</a>
             </li>
           </ul>
