--- a/contact.html
+++ b/contact.html
@@ -1,21 +1,39 @@
+<!--
+//////////////////////////////////////////////////////////////////////////
+/
+/   Real Estate by Malav -  contact.html
+/   developed by Malav Panchal
+/   realtor.malav@gmail.com
+/
+/  This html file contains Bootstrap 5 elements
+/  CSS and Javascript included in the file
+/
+//////////////////////////////////////////////////////////////////////////
+-->
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact Us | Real Estate by Malav</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="icon" href="images\Malav.ico">
+
+  <!-- Bootstrap 5 CSS link -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
   <!-- This link is for google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Sacramento&family=Slabo+27px&display=swap" rel="stylesheet">
+
   <!-- This link is to use Social Media account logos -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <!-- Including CSS file at the bottom so that it takes preceedence over bootstrap styling -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-
 
 <!--**************************************************** BODY **********************************************************-->
 
@@ -44,6 +62,9 @@
               <a class="nav-link" href="services.html">Services</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="Social_media.html">Social Media</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link active" href="contact.html">Contact Us</a>
             </li>
           </ul>
@@ -57,8 +78,7 @@
   <div class="about-page-middle-container">
 
     <!--**************************************About section Container**************************************************-->
-    <div class="service-page-container">
-
+    <div class="about-page-container">
       <div class="row">
         <div class="col">
           <div class="about-pic" id="about-pic">
