correcting social_media.html name

--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
               <a class="nav-link" href="services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Social_media.html">Social Media</a>
+              <a class="nav-link" href="social_media.html">Social Media</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact Us</a>
