--- a/social_Media.html
+++ b/social_Media.html
@@ -16,7 +16,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home | Real Estate by Malav</title>
+  <title>Social Media | Real Estate by Malav</title>
   <link rel="icon" href="images\Malav.ico">
 
   <!-- Bootstrap 5 CSS link -->
