MEnu working in social_media.html

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <a href="https://www.instagram.com/realtor_malav/" class="instagram" id="instagram">@realtor_malav</a>
       <!-- Place <div> tag where you want the feed to appear -->
       <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
-      <a href="social_Media.html" class="explore_social" id="explore_social">Explore more Social Media</a>
+      <a href="social_media.html" class="explore_social" id="explore_social">Explore more Social Media</a>
     </div>
   </div>
 
