services page added

--- a/services.html
+++ b/services.html
@@ -28,6 +28,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Sacramento&family=Slabo+27px&display=swap" rel="stylesheet">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+
   <!-- This link is to use Social Media account logos -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -75,26 +79,23 @@
 
 
   <!--**************************************Middle Container**************************************************-->
-  <div class="about-page-middle-container">
+  <div class="service-page-middle-container">
 
     <!--**************************************About section Container**************************************************-->
-    <div class="about-page-container">
+    <div class="my-mission-container">
+      <div class="row">
+        <div class="my-mission-text">
+          <h2>My Mission</h2>
+          <p>"Offering my clients with <span style="color:#003260" ;>Genuine</span> and <span style="color:#003260" ; font-weight: bolder;>Coherent</span> service to surpass their expectation every time."</p>
+        </div>
+      </div>
       <div class="row">
         <div class="col">
-          <div class="about-pic" id="about-pic">
-            <img src="images\about-photo.jpg" alt="about-pic">
-          </div>
+
+
         </div>
         <div class="col">
-          <h2>MALAV PANCHAL</h2>
-          <h3>Sales Representative</h3>
-          <p class="about-text" id="about-text">Malav Panchal began his career in real estate after being inspired by his own home buying experience. <br><br>
-            An industrious REALTOR® who enjoys interacting with others, I takes the time to forge honest, meaningful relationships with my clients.
-            Through frequent communication and clarification of industry terms and procedures, he strives to ensure they are fully informed and understand all aspects of any purchase or sale.<br><br>
-            Malav graduated studied Electronic Engineering. During his time, he volunteered as an Orientation Leader, encouraging and assisting new students.
-            He went on to work in the Software industry as a Quality Assurance Engineer. This developed his troubleshooting skills and taught him the importance of attention to detail in every task,
-            svaluable experience he brings with him to his exciting journey as a REALTOR.<br><br>
-            Malav is proficient in both spoken and written English, Gujarati and Hindi.</p>
+
         </div>
       </div>
     </div>
@@ -104,15 +105,12 @@
   <div class="about-page-value-container">
     <div class="row">
       <div class="col">
-        <div class="value-heading">
-          <h3 style="color:#fff;">My Values</h3>
-          <h2 style="color:#fff;">Integrity & Trust</h2>
-          <p class="value-text" id="value-text">I give the clients I work with my full & undivided attention to truly understand and ensure their needs are being met from the start.<br><br>
-            The fundamental core of any professional relationship is trust. It is important to me that my clients feel that I have their best intentions always in mind.</p>
-        </div>
+
+
       </div>
-      <div class="col img-fluid" style="text-align: right;">
-          <img class="value-pic" src="images\value.jpg" alt="value-pic">
+      <div class="col">
+
+
       </div>
     </div>
   </div>
