Serice page working

--- a/services.html
+++ b/services.html
@@ -81,7 +81,7 @@
   <!--**************************************Middle Container**************************************************-->
   <div class="service-page-middle-container">
 
-    <!--**************************************About section Container**************************************************-->
+    <!--**************************************Mission section Container**************************************************-->
     <div class="my-mission-container">
       <div class="row">
         <div class="my-mission-text">
@@ -89,13 +89,38 @@
           <p>"Offering my clients with <span style="color:#003260" ;>Genuine</span> and <span style="color:#003260" ; font-weight: bolder;>Coherent</span> service to surpass their expectation every time."</p>
         </div>
       </div>
-      <div class="row">
-        <div class="col">
+    </div>
 
 
+    <div class="services-pic-container">
+      <div class="row justify-content-center">
+        <div class="col-lg-4">
+          <h2>Buy & Sell</h2>
+          <img class="buy-sell" src="images\buy-sell.jpg" alt="buy-sell-pic">
+          <p>“Owning a home is a keystone of wealth… both financial affluence and emotional security.”
+            –Suze Orman</p>
         </div>
-        <div class="col">
+        <div class="col-lg-4">
+          <h2>Lease</h2>
+          <img class="lease" src="images\lease.jpg" alt="lease-pic" style="text-align:right" ;>
+          <p>“A man travels the world over in search of what he needs and returns home to find it.”
+            –George A. Moore</p>
+        </div>
+      </div>
 
+      <div class="row justify-content-center">
+        <div class="col-lg-4">
+          <h2>Commercial</h2>
+          <img class="commercial" src="images\commercial.jpg" alt="commercial-pic">
+          <p> “It’s not about the money, though that’s nice to have.
+            At the end of the day, it’s really about matching the right buyer to the right seller.
+            We’re matchmakers—real estate matchmakers.” –Valerie Fitzgerald,</p>
+        </div>
+        <div class="col-lg-4">
+          <h2>Invest</h2>
+          <img class="invest" src="images\invest.jpg" alt="invest-pic">
+          <p>“Real Estate provides the highest returns, the greatest values, and the least risk.”
+            –Armstrong Williams</p>
         </div>
       </div>
     </div>
