--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
       </nav>
 
-      <div class="img-banner-fluid">
+      <div class="img-banner-fluid col-lg-12">
         <div class="maintxt">
           Your perfect home awaits you.
         </div>
