Final working site with Contact page working

--- a/contact.html
+++ b/contact.html
@@ -75,47 +75,69 @@
 
 
   <!--**************************************Middle Container**************************************************-->
-  <div class="about-page-middle-container">
+  <div class="contact-page-middle-container">
 
     <!--**************************************About section Container**************************************************-->
-    <div class="about-page-container">
+    <div class="contact-page-container">
       <div class="row">
         <div class="col">
-          <div class="about-pic" id="about-pic">
-            <img src="images\about-photo.jpg" alt="about-pic">
+          <h1>Let's Connect</h1>
+        </div>
+      </div>
+
+      <div class="row top-buffer">
+        <div class="col-lg-4">
+          <p><a href="https://goo.gl/maps/vvy8qvX4M38NLnsx6">
+              <img src="images\map.png" alt="map">
+            </a></p>
+          <h2>Our Office</h2>
+          <p><a href="https://goo.gl/maps/vvy8qvX4M38NLnsx6">508 Riverbend Drive Kitchener, ON N2K 3S2</a></p>
+        </div>
+        <div class="col-lg-4">
+          <p><a href="tel:+16477084395">
+              <img src="images\phone.png" alt="map">
+            </a></p>
+          <h2>Phone Number</h2>
+          <p><a href="tel:+16477084395">+1(647)-708-4395</a></p>
+        </div>
+        <div class="col-lg-4">
+          <p><a href="mailto:realtor.malav@gmail.com">
+              <img src="images\email.png" alt="map">
+            </a></p>
+          <h2>Email</h2>
+          <p><a href="mailto:realtor.malav@gmail.com">realtor.malav@gmail.com</a></p>
+        </div>
+      </div>
+
+      <div class="row top-buffer">
+        <div class="col">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11581.201124170786!2d-80.4786241!3d43.4752034!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6bf6fc8066fca2dd!2sReal%20Estate%20by%20Malav!5e0!3m2!1sen!2sca!4v1630525120225!5m2!1sen!2sca" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+        <div class="col let-talk-24x7">
+          <div class="row">
+            <h3>Let's get started with me 24x7 on any of these platform.</h3>
+          </div>
+          <div class="row justify-content-md-center">
+            <div class="col col-lg-2">
+              <a href="https://www.facebook.com/malavrealtor/" class="fa fa-facebook"></a>
+            </div>
+            <div class="col col-lg-2">
+              <a href="mailto:realtor.malav@gmail.com" class="fa fa-envelope"></a>
+            </div>
+            <div class="col col-lg-2">
+              <a href="https://www.instagram.com/realtor_malav/" class="fa fa-instagram"></a>
+            </div>
+            <div class="col col-lg-2">
+              <a href="https://www.snapchat.com/add/malav_panchal" class="fa fa-snapchat-ghost"></a>
+            </div>
           </div>
         </div>
-        <div class="col">
-          <h2>MALAV PANCHAL</h2>
-          <h3>Sales Representative</h3>
-          <p class="about-text" id="about-text">Malav Panchal began his career in real estate after being inspired by his own home buying experience. <br><br>
-            An industrious REALTOR® who enjoys interacting with others, I takes the time to forge honest, meaningful relationships with my clients.
-            Through frequent communication and clarification of industry terms and procedures, he strives to ensure they are fully informed and understand all aspects of any purchase or sale.<br><br>
-            Malav graduated studied Electronic Engineering. During his time, he volunteered as an Orientation Leader, encouraging and assisting new students.
-            He went on to work in the Software industry as a Quality Assurance Engineer. This developed his troubleshooting skills and taught him the importance of attention to detail in every task,
-            svaluable experience he brings with him to his exciting journey as a REALTOR.<br><br>
-            Malav is proficient in both spoken and written English, Gujarati and Hindi.</p>
-        </div>
       </div>
+
     </div>
   </div>
 
 
-  <div class="about-page-value-container">
-    <div class="row">
-      <div class="col">
-        <div class="value-heading">
-          <h3 style="color:#fff;">My Values</h3>
-          <h2 style="color:#fff;">Integrity & Trust</h2>
-          <p class="value-text" id="value-text">I give the clients I work with my full & undivided attention to truly understand and ensure their needs are being met from the start.<br><br>
-            The fundamental core of any professional relationship is trust. It is important to me that my clients feel that I have their best intentions always in mind.</p>
-        </div>
-      </div>
-      <div class="col img-fluid" style="text-align: right;">
-          <img class="value-pic" src="images\value.jpg" alt="value-pic">
-      </div>
-    </div>
-  </div>
 
 
 
@@ -124,7 +146,7 @@
   <!--**************************************Bottom Container**************************************************-->
   <div class="bottom-container">
     <a href="https://www.facebook.com/malavrealtor/" class="fa fa-facebook"></a>
-    <a href="https://twitter.com/malav4395" class="fa fa-twitter"></a>
+    <a href="mailto:realtor.malav@gmail.com" class="fa fa-envelope"></a>
     <a href="https://www.instagram.com/realtor_malav/" class="fa fa-instagram"></a>
     <a href="https://www.snapchat.com/add/malav_panchal" class="fa fa-snapchat-ghost"></a>
     <p class="copyright">© 2021 Malav Panchal.</p>
