--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   <!--**************************************Bottom Container**************************************************-->
   <div class="bottom-container">
     <a href="https://www.facebook.com/malavrealtor/" class="fa fa-facebook"></a>
-    <a href="https://twitter.com/malav4395" class="fa fa-twitter"></a>
+    <a href="mailto:realtor.malav@gmail.com" class="fa fa-envelope"></a>
     <a href="https://www.instagram.com/realtor_malav/" class="fa fa-instagram"></a>
     <a href="https://www.snapchat.com/add/malav_panchal" class="fa fa-snapchat-ghost"></a>
     <p class="copyright">© 2021 Malav Panchal.</p>
