--- a/social_media.html
+++ b/social_media.html
@@ -42,38 +42,36 @@
 
   <!--**************************************Top Container**************************************************-->
   <div class="top-container">
-    <div class="container-fluid">
-      <nav class="navbar navbar-light navbar-expand-md bg-faded justify-content-center">
-
-        <a class="navbar-brand d-flex w-50 mr-auto justify-content-center" href="index.html">
+    <nav class="navbar navbar-light navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand d-flex justify-content-lg-start ps-5" href="index.html">
           <img src="images\Malav_Logo.png" alt="logo" style="width:200px;">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="services.html">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="social_media.html">Social Media</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact Us</a>
-            </li>
-          </ul>
+        <div class="collapse navbar-collapse justify-content-lg-end pe-5" id="navbarSupportedContent">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="services.html">Services</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="social_media.html">Social Media</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact Us</a>
+              </li>
+            </ul>
         </div>
-      </nav>
-    </div>
+      </div>
+    </nav>
   </div>
 
   <div class="social-top-container">
