added phone in bottom container and added whatsapp as well

--- a/services.html
+++ b/services.html
@@ -132,6 +132,7 @@
     <a href="mailto:realtor.malav@gmail.com" class="fa fa-envelope"></a>
     <a href="https://www.instagram.com/realtor_malav/" class="fa fa-instagram"></a>
     <a href="https://www.snapchat.com/add/malav_panchal" class="fa fa-snapchat-ghost"></a>
+    <a href="tel:+16477084395" class="fa fa-mobile"></a>
     <p class="copyright">© 2021 Malav Panchal.</p>
   </div>
 
