--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
               </ul>
           </div>
         </div>
-      </nav>    
+      </nav>
   </div>
 
 
@@ -130,6 +130,9 @@
             <div class="col col-lg-2">
               <a href="https://www.snapchat.com/add/malav_panchal" class="fa fa-snapchat-ghost"></a>
             </div>
+            <div class="col col-lg-2">
+              <a href="https://api.whatsapp.com/send?phone=16477084395&fbclid=IwAR2XTAOAlZdwc0sTbDoxU7Dr_Fnbr5B_zatjztiW1S6z01JpPQ6BpVzjFMA" class="fa fa-whatsapp"></a>
+            </div>
           </div>
         </div>
       </div>
@@ -149,6 +152,7 @@
     <a href="mailto:realtor.malav@gmail.com" class="fa fa-envelope"></a>
     <a href="https://www.instagram.com/realtor_malav/" class="fa fa-instagram"></a>
     <a href="https://www.snapchat.com/add/malav_panchal" class="fa fa-snapchat-ghost"></a>
+    <a href="tel:+16477084395" class="fa fa-mobile"></a>
     <p class="copyright">© 2021 Malav Panchal.</p>
   </div>
 
