added phonenumber, insta,fb,email

--- a/index.html
+++ b/index.html
@@ -52,23 +52,35 @@
         </button>
 
         <div class="collapse navbar-collapse justify-content-lg-end pe-5" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="services.html">Services</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="social_media.html">Social Media</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact Us</a>
-              </li>
-            </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="services.html">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="social_media.html">Social Media</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact Us</a>
+            </li>
+            <li class="nav-item">
+              <a href="tel:+16477084395">647-708-4395</a>
+            </li>
+            <li class="nav-item">
+              <a href="https://www.facebook.com/malavrealtor/" class="fa fa-facebook"></a>
+            </li>
+            <li class="nav-item">
+              <a href="mailto:realtor.malav@gmail.com" class="fa fa-envelope"></a>
+            </li>
+            <li class="nav-item">
+              <a href="https://www.instagram.com/realtor_malav/" class="fa fa-instagram"></a>
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
