Added Social media logo on profile

--- a/contact.html
+++ b/contact.html
@@ -41,36 +41,55 @@
 
   <!--**************************************Top Container**************************************************-->
   <div class="top-container">
-      <nav class="navbar navbar-light navbar-expand-lg">
-        <div class="container-fluid">
-          <a class="navbar-brand d-flex justify-content-lg-start ps-5" href="index.html">
-            <img src="images\Malav_Logo.png" alt="logo" style="width:200px;">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+    <nav class="navbar fixed-top navbar-light navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand d-flex justify-content-lg-start ps-5" href="index.html">
+          <img src="images\Malav_Logo.png" alt="logo" style="width:200px;">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-          <div class="collapse navbar-collapse justify-content-lg-end pe-5" id="navbarSupportedContent">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link active" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="services.html">Services</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="social_media.html">Social Media</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact Us</a>
-                </li>
-              </ul>
-          </div>
+        <div class="collapse navbar-collapse justify-content-lg-end pe-2" id="navbarSupportedContent">
+          <ul class="navbar-nav d-flex align-items-center">
+            <li class="nav-item">
+              <a class="nav-link active" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="services.html">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="social_media.html">Social Media</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact Us</a>
+            </li>
+            <li class="nav-item ps-5 pe-2">
+              <a class="nav-link nav-phone" href="tel:+16477084395">647-708-4395</a>
+            </li>
+            <li class="nav-item ps-3 pe-3">
+              <div class="row d-sm-inline-flex">
+                <div class="col p-0 mx-0">
+                  <a href="https://www.facebook.com/malavrealtor/" class="fa fa-facebook"></a>
+                </div>
+                <div class="col p-0 mx-0">
+                  <a href="mailto:realtor.malav@gmail.com" class="fa fa-envelope"></a>
+                </div>
+                <div class="col p-0 mx-0">
+                  <a href="https://www.instagram.com/realtor_malav/" class="fa fa-instagram"></a>
+                </div>
+                <div class="col p-0 mx-0">
+                  <a href="https://api.whatsapp.com/send?phone=16477084395&fbclid=IwAR2XTAOAlZdwc0sTbDoxU7Dr_Fnbr5B_zatjztiW1S6z01JpPQ6BpVzjFMA" class="fa fa-whatsapp"></a>
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
-      </nav>
+      </div>
+    </nav>
   </div>
 
 
@@ -111,7 +130,9 @@
 
       <div class="row top-buffer">
         <div class="col">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11581.201124170786!2d-80.4786241!3d43.4752034!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6bf6fc8066fca2dd!2sReal%20Estate%20by%20Malav!5e0!3m2!1sen!2sca!4v1630525120225!5m2!1sen!2sca" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11581.201124170786!2d-80.4786241!3d43.4752034!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6bf6fc8066fca2dd!2sReal%20Estate%20by%20Malav!5e0!3m2!1sen!2sca!4v1630525120225!5m2!1sen!2sca"
+            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div class="col let-talk-24x7">
           <div class="row">
