--- a/social_media.html
+++ b/social_media.html
@@ -42,7 +42,7 @@
 
   <!--**************************************Top Container**************************************************-->
   <div class="top-container">
-    <nav class="navbar navbar-light navbar-expand-lg">
+    <nav class="navbar fixed-top navbar-light navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand d-flex justify-content-lg-start ps-5" href="index.html">
           <img src="images\Malav_Logo.png" alt="logo" style="width:200px;">
@@ -51,24 +51,43 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse justify-content-lg-end pe-5" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="services.html">Services</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="social_media.html">Social Media</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact Us</a>
-              </li>
-            </ul>
+        <div class="collapse navbar-collapse justify-content-lg-end pe-2" id="navbarSupportedContent">
+          <ul class="navbar-nav d-flex align-items-center">
+            <li class="nav-item">
+              <a class="nav-link active" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="services.html">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="social_media.html">Social Media</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact Us</a>
+            </li>
+            <li class="nav-item ps-5 pe-2">
+              <a class="nav-link nav-phone" href="tel:+16477084395">647-708-4395</a>
+            </li>
+            <li class="nav-item ps-3 pe-3">
+              <div class="row d-sm-inline-flex">
+                <div class="col p-0 mx-0">
+                  <a href="https://www.facebook.com/malavrealtor/" class="fa fa-facebook"></a>
+                </div>
+                <div class="col p-0 mx-0">
+                  <a href="mailto:realtor.malav@gmail.com" class="fa fa-envelope"></a>
+                </div>
+                <div class="col p-0 mx-0">
+                  <a href="https://www.instagram.com/realtor_malav/" class="fa fa-instagram"></a>
+                </div>
+                <div class="col p-0 mx-0">
+                  <a href="https://api.whatsapp.com/send?phone=16477084395&fbclid=IwAR2XTAOAlZdwc0sTbDoxU7Dr_Fnbr5B_zatjztiW1S6z01JpPQ6BpVzjFMA" class="fa fa-whatsapp"></a>
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
@@ -92,7 +111,7 @@
       e.parentNode.insertBefore(i, e);
     })();
   </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
