added correct tab active label

--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
         <div class="collapse navbar-collapse justify-content-lg-end pe-2" id="navbarSupportedContent">
           <ul class="navbar-nav d-flex align-items-center">
             <li class="nav-item">
-              <a class="nav-link active" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
@@ -65,7 +65,7 @@
               <a class="nav-link" href="social_media.html">Social Media</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact Us</a>
+              <a class="nav-link active" href="contact.html">Contact Us</a>
             </li>
             <li class="nav-item ps-5 pe-2">
               <a class="nav-link nav-phone" href="tel:+16477084395">647-708-4395</a>
