--- a/social_media.html
+++ b/social_media.html
@@ -54,7 +54,7 @@
         <div class="collapse navbar-collapse justify-content-lg-end pe-2" id="navbarSupportedContent">
           <ul class="navbar-nav d-flex align-items-center">
             <li class="nav-item">
-              <a class="nav-link active" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
@@ -63,7 +63,7 @@
               <a class="nav-link" href="services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="social_media.html">Social Media</a>
+              <a class="nav-link active" href="social_media.html">Social Media</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact Us</a>
