--- a/about.html
+++ b/about.html
@@ -53,10 +53,10 @@
         <div class="collapse navbar-collapse justify-content-lg-end pe-2" id="navbarSupportedContent">
           <ul class="navbar-nav d-flex align-items-center">
             <li class="nav-item">
-              <a class="nav-link active" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link active" href="about.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="services.html">Services</a>
