--- a/services.html
+++ b/services.html
@@ -57,13 +57,13 @@
         <div class="collapse navbar-collapse justify-content-lg-end pe-2" id="navbarSupportedContent">
           <ul class="navbar-nav d-flex align-items-center">
             <li class="nav-item">
-              <a class="nav-link active" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="services.html">Services</a>
+              <a class="nav-link  active" href="services.html">Services</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="social_media.html">Social Media</a>
