Added Contact Us box

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
 /
 /  This html file contains Bootstrap 5 elements
 /  CSS and Javascript included in the file
+/  Form is used from getform.io
 /
 //////////////////////////////////////////////////////////////////////////
 -->
@@ -159,37 +160,34 @@
       </div>
 
       <div class="row top-buffer">
-        <div class="col">
+        <div class="col-lg-7 d-flex align-items-center justify-content-center">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11581.201124170786!2d-80.4786241!3d43.4752034!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6bf6fc8066fca2dd!2sReal%20Estate%20by%20Malav!5e0!3m2!1sen!2sca!4v1630525120225!5m2!1sen!2sca"
             width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
-        <div class="col let-talk-24x7">
-          <div class="row">
-            <h3>Let's get started with me 24x7 on any of these platform.</h3>
-          </div>
-          <div class="row justify-content-md-center">
-            <div class="col col-lg-2">
-              <a href="https://www.facebook.com/malavrealtor/" class="fa fa-facebook"></a>
+        <div class="col-lg-4 form-section">
+          <h2>Let's Stay Connected</h2>
+          <form action="https://getform.io/f/73d0fac4-c91c-42ae-bace-18a9a2113612" method="POST">
+            <div class="w-40">
+              <label for="exampleFormControlInput1" class="form-label">Name</label>
+              <input type="text" name="name" class="form-control" id="exampleFormControlInput1" placeholder="Your Name">
             </div>
-            <div class="col col-lg-2">
-              <a href="mailto:realtor.malav@gmail.com" class="fa fa-envelope"></a>
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">Email address</label>
+              <input type="email" name="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
             </div>
-            <div class="col col-lg-2">
-              <a href="https://www.instagram.com/realtor_malav/" class="fa fa-instagram"></a>
+            <div class="mb-3">
+              <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+              <textarea type="text" name="message" class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="Your message..."></textarea>
             </div>
-            <div class="col col-lg-2">
-              <a href="https://www.snapchat.com/add/malav_panchal" class="fa fa-snapchat-ghost"></a>
-            </div>
-            <div class="col col-lg-2">
-              <a href="https://api.whatsapp.com/send?phone=16477084395&fbclid=IwAR2XTAOAlZdwc0sTbDoxU7Dr_Fnbr5B_zatjztiW1S6z01JpPQ6BpVzjFMA" class="fa fa-whatsapp"></a>
-            </div>
-          </div>
+              <button type="submit" class="btn btn-lg btn-secondary d-grid gap-2 col-2 mx-auto">Send</button>
+          </form>
         </div>
       </div>
 
     </div>
   </div>
+
 
 
 
