--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
   <div class="contact-me-container">
     <div class="row">
-      <div class="map d-flex justify-content-evenly col">
+      <div class="map d-flex align-items-center justify-content-center col p-4">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2895.300282042722!2d-80.48081278450799!3d43.475203379127876!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882bf3788e65c45f%3A0x6bf6fc8066fca2dd!2sReal%20Estate%20by%20Malav!5e0!3m2!1sen!2sca!4v1630073346745!5m2!1sen!2sca"
           width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
@@ -160,7 +160,7 @@
         <p class="address" id="address">508 Riverbend Drive <br />Kitchener, ON N2K 3S2</p>
       </div>
       <div class="col">
-        <table class="table d-inline-flex">
+        <table class="table d-inline-flex justify-content-sm-center">
           <tbody>
             <tr>
               <td>Monday</td>
