Chnaged Send button to just large

--- a/contact.html
+++ b/contact.html
@@ -180,7 +180,7 @@
               <label for="exampleFormControlTextarea1" class="form-label">Message</label>
               <textarea type="text" name="message" class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="Your message..."></textarea>
             </div>
-              <button type="submit" class="btn btn-lg btn-secondary d-grid gap-2 col-2 mx-auto">Send</button>
+              <button type="submit" class="btn btn-lg btn-secondary">Send</button>
           </form>
         </div>
       </div>
