Image brightness low but text high

--- a/services.html
+++ b/services.html
@@ -133,9 +133,10 @@
     <!--**************************************Mission section Container**************************************************-->
     <div class="my-mission-container">
       <div class="row">
+        <div class="my-mission-container-bg"></div>
         <div class="my-mission-text">
           <h2>My Mission</h2>
-          <p>"Offering my clients with <span style="color:#003260" ;>Genuine</span> and <span style="color:#003260" ; font-weight: bolder;>Coherent</span> service to surpass their expectation every time."</p>
+          <p>"Offering my clients with <span style="text-decoration: underline dotted" ;>Genuine</span> and <span style="text-decoration: underline dotted" ;>Coherent</span> service to surpass their expectation every time."</p>
         </div>
       </div>
     </div>
