--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,18 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7XWWRRPFSG"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-7XWWRRPFSG');
+  </script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact Us | Real Estate by Malav</title>
   <link rel="icon" href="images\Malav.ico">
@@ -180,7 +192,7 @@
               <label for="exampleFormControlTextarea1" class="form-label">Message</label>
               <textarea type="text" name="message" class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="Your message..."></textarea>
             </div>
-              <button type="submit" class="btn btn-lg btn-secondary">Send</button>
+            <button type="submit" class="btn btn-lg btn-secondary">Send</button>
           </form>
         </div>
       </div>
