--- a/services.html
+++ b/services.html
@@ -15,6 +15,18 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7XWWRRPFSG"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-7XWWRRPFSG');
+  </script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Services | Real Estate by Malav</title>
   <link rel="icon" href="images\Malav.ico">
