Added code without beautify

--- a/contact.html
+++ b/contact.html
@@ -20,10 +20,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-7XWWRRPFSG"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-      dataLayer.push(arguments);
-    }
+    function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
     gtag('config', 'G-7XWWRRPFSG');
