--- a/social_media.html
+++ b/social_media.html
@@ -16,17 +16,15 @@
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7XWWRRPFSG"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7XWWRRPFSG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
+  gtag('config', 'G-7XWWRRPFSG');
+</script>
 
-    gtag('config', 'G-7XWWRRPFSG');
-  </script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Social Media | Real Estate by Malav</title>
   <link rel="icon" href="images\Malav.ico">
