Added top padding for Check my Instagram and added padding on about page

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 
     gtag('config', 'G-7XWWRRPFSG');
   </script>
-  
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home | Real Estate by Malav</title>
   <link rel="icon" href="images\Malav.ico">
@@ -144,7 +144,7 @@
             <img src="images\about-photo.jpg" alt="about-pic">
           </div>
         </div>
-        <div class="col">
+        <div class="col px-5">
           <h2>MALAV PANCHAL</h2>
           <h3>Sales Representative</h3>
           <p class="about-text" id="about-text">Malav Panchal began his career in real estate after being inspired by his own home buying experience. <br><br>
